# Skills_demo

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  USAGE.md  pyproject.toml
.claude/: .env.example  settings.json  statusline.sh
.claude/hooks/: archive-low-frequency-skills.sh  capture-reasoning.sh  check-pdf-updates.sh  check-skills-limit.sh  count-skills-usage.sh  detect-task-complete.sh  fix-reasoning.sh  intent-detect.sh  notify-server.py  promote-to-proven.sh  response-complete.sh  session-start.sh  start-notify-server.sh  task-complete.sh  track-skills-change.sh  update-reasoning-on-task.sh  update-status.sh
.claude/hooks/lib/: common.sh
.claude/skills/commander/: SKILL.md
.claude/skills/commander/references/: commands.md  directory-management.md  error-handling.md  profile-check.md  promotion-flow.md  task-states.md
.claude/skills/intent-router/: SKILL.md
.claude/skills/notify-server/: SKILL.md
.claude/skills/pdf_processor/: SKILL.md
.claude/skills/pdf_processor/scripts/: processor.py  summarizer.py
.claude/skills/skill-generator/: SKILL.md
.claude/skills/task-intent/: SKILL.md
.claude/skills/user-profile/: SKILL.md
.info/: info.md  tasks.json  usr.json  usr.json.template
.templates/: info.md  pdf_processor.json.template  usr.json.template
docs/: architecture.md  claude-code-data-analysis.md  hooks.md  statusline.md  usage.md
info/: README.md  bio.md  goals.md  preferences.json  skills.md
results/: README.md
scripts/: pdf-process-bg.sh  quick-start.sh  start.ps1  start.sh
(+9 files in other folders)
