[project]
name = "skills-demo"
version = "0.1.0"
description = "Claude Code Skills Demo Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "bibtexparser==1.4.4",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
pdf = [
    "PyMuPDF>=1.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 只包含特定目录，避免打包问题
include = [
    "pdf_processor/",
]

[tool.hatch.build]
# 不使用自动发现，手动指定包
packages = []
